<resources>
    <string name="app_name">IMDB</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="seasons">%1d Seasons</string>
    <string name="season">%1d Season</string>
    <string name="popular">Popular</string>
    <string name="tvSeries">Tv Series</string>
    <string name="topRated">Top Rated</string>
    <string name="title">title</string>
    <string name="genres">genres</string>
    <string name="born">Born: </string>
    <string name="creators">Creators: </string>
    <string name="known_for">Known For</string>
    <string name="cast">Cast</string>
    <string name="see_less">See less >></string>
    <string name="see_full">See full bio >></string>
    <string name="search">Search</string>
    <string name="movies_or_series">Movies or Series</string>
    <string name="any_result">your search didn\'t have any results</string>
    <string name="birthday">Birthday</string>
    <string name="department">Department</string>
    <string name="name">Name</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="we">We</string>
    <string name="movie">movie</string>
    <string name="email">Email</string>
    <string name="email_or_username">Email / Username</string>
    <string name="password">Password</string>
    <string name="email_hint">johndoe@hotmail.com</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don’t have an account? Register Now </string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="more_info">By registering you agree to Terms &amp; Conditions\nand Privacy Policy of the Movee</string>
    <string name="hello">Hello </string>
    <string name="profile">Profile</string>
    <string name="login_warning_password">Sorry, your username or password was incorrect.\nPlease double-check your password.</string>
    <string name="logout">Logout</string>
    <string name="login_error">Please try again!</string>
    <string name="error">Ups, something went wrong, check network connection or try again later!</string>
    <string name="try_again">Please, try again</string>
    <string name="passwordLength">Password needs to be at least %1d characters long</string>
    <string name="favorite">Favorites</string>
    <string name="snackbar_item_delete">Item was deleted</string>
    <string name="snackbar_item_delete_undo">Item add</string>

</resources>
