<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_drawable"
    tools:context=".profile.ProfileFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profilePageTitleTextView"
        style="@style/PageTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
        android:layout_marginTop="@dimen/mainFragmentsLeftSpace"
        android:text="@string/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profilePageHelloTextView"
        style="@style/HelloTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
        android:layout_marginTop="@dimen/margin_30"
        android:text="@string/hello"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilePageTitleTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/profilePageNameTextView"
        style="@style/ProfileUsernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilePageHelloTextView"
        tools:text="TextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profileLogoutButton"
        style="@style/CancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mainFragmentsLeftSpace"
        android:layout_marginEnd="@dimen/mainFragmentsRightSpace"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/favoriteTextView"
        style="@style/PopularTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
        android:layout_marginTop="@dimen/profile_favorite_top"
        android:text="@string/favorite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePageNameTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoritesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/mainFragmentsRightSpace"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favoriteTextView">

    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>