<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LoginBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/loginEmailTextView"
        style="@style/EmailAndPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
        android:layout_marginTop="@dimen/margin_top_login_email"
        android:text="@string/email_or_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/loginEmailEditText"
        style="@style/EmailAndPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
        android:layout_marginTop="@dimen/margin_5"
        android:ems="18"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="0dp"
        android:singleLine="true"
        android:textColorHint="@color/hintColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/loginPasswordTextView"
        style="@style/EmailAndPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
        android:layout_marginTop="@dimen/mainFragmentsLeftSpace"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailEditText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordLayout"
        style="@style/EmailAndPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/hintColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordTextView"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordEditText"
            style="@style/EmailAndPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mainFragmentsLeftSpace"
            android:layout_marginTop="@dimen/margin_5"
            android:ems="18"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"

            android:textColorHint="@color/hintColor" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgotPasswordButton"
        style="@style/ForgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/margin_30"
        android:layout_marginTop="@dimen/itemTopAndBottomSpace"
        android:layout_marginRight="@dimen/mainFragmentsRightSpace"
        android:text="@string/forgot_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        style="@style/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_login_button"
        android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
        android:layout_marginTop="@dimen/margin_48"
        android:layout_marginEnd="@dimen/mainFragmentsRightSpace"
        android:text="@string/login"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        style="@style/ForgotPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/itemTopAndBottomSpace"
        android:text="@string/dont_have_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/warningTextView"
        style="@style/IncorrectPw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/warning_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordButton"
        app:layout_constraintWidth_percent="0.8" />

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="@dimen/margin_30"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:indeterminateTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>