<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".movie.MoviesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_drawable">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/onShowingMovieTitleTextView"
            style="@style/MainTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_22"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onShowingMovieVoteAverageTextView"
            tools:text="@string/title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/longLineTextView"
            style="@style/LongLineTextView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"
            android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
            android:layout_marginLeft="@dimen/mainFragmentsLeftSpace"
            android:layout_marginTop="@dimen/margin_1"
            android:layout_marginEnd="@dimen/mainFragmentsLeftSpace"
            android:layout_marginRight="@dimen/mainFragmentsLeftSpace"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onShowingMovieCategoryTextView"
            tools:text="" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/onShowingMoviesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/onShowingMovieCategoryTextView"
            style="@style/MainCategoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onShowingMovieTitleTextView"
            tools:text="@string/genres" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popularMoviesRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:foregroundGravity="center"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popularTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/movieTextView"
            style="@style/PageTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
            android:layout_marginTop="@dimen/mainFragmentsLeftSpace"
            android:text="@string/movies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lineHeight="@dimen/margin_41" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/onShowingMovieVoteAverageTextView"
            style="@style/MainVoteAverageTextView"
            android:layout_width="@dimen/margin_55"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
            android:layout_marginTop="@dimen/margin_5"
            android:paddingVertical="@dimen/margin_4"
            android:paddingLeft="@dimen/voteAverageLeftPadding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onShowingMoviesRecyclerView"
            tools:text="" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/popularTextView"
            style="@style/PopularTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
            android:layout_marginTop="@dimen/margin_1"
            android:text="@string/popular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onShowingMovieCategoryTextView" />

        <ProgressBar
            android:id="@+id/moviesProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_20"
            android:indeterminateTint="@color/almostBlack"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/onShowingMovieCategoryTextView"
            app:layout_constraintTop_toBottomOf="@+id/onShowingMovieTitleTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>