<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scrollbars="vertical"
    tools:context=".cast.CastDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_55">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/creditPosterImageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_400"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/creditNameTextView"
            style="@style/CreditNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginEnd="@dimen/mainFragmentsRightSpace"
            tools:text="Name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/creditBiographyTextView"
            style="@style/OverviewTextView"
            android:maxLines="4"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
            android:layout_marginTop="@dimen/margin_15"
            android:layout_marginEnd="@dimen/mainFragmentsRightSpace"
            tools:text="Biography" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/seeLessTextView"
            style="@style/SeeLessText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/mainFragmentsRightSpace"
            android:background="#00FFFFFF"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:text="@string/see_full"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bornTextView"
            style="@style/OverviewTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
            android:layout_marginTop="@dimen/margin_14"
            android:layout_marginEnd="@dimen/mainFragmentsRightSpace"
            android:fontFamily="@font/sf_pro_display_bold"
            android:text="@string/born" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/creditKnownForTextView"
            style="@style/KnownForTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/mainFragmentsRightSpace"
            android:text="@string/known_for" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/combineCreditsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/mainFragmentsLeftSpace"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/mainFragmentsRightSpace" />
    </LinearLayout>

</ScrollView>



